{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 122,
  "lineage": "e858a107-0fa9-1a7d-43ff-daf2ccf2dd53",
  "resources": [
    {
      "module": "module.web-servers[0]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-server-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cdfbeb011ed8a5e7",
            "association_id": "eipassoc-06271a6306c585d32",
            "domain": "vpc",
            "id": "eipalloc-0cdfbeb011ed8a5e7",
            "instance": "i-0565b9969f69ba829",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0612a2bd922681cf6",
            "private_dns": "ip-172-31-6-123.us-east-2.compute.internal",
            "private_ip": "172.31.6.123",
            "public_dns": "ec2-3-19-124-202.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.124.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.web-servers.aws_instance.ec2_instance",
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0565b9969f69ba829",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0565b9969f69ba829",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0612a2bd922681cf6",
            "private_dns": "ip-172-31-6-123.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.123",
            "public_dns": "ec2-18-188-130-26.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.130.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00fbd4c4684a2b2dd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-0"
            },
            "tags_all": {
              "Name": "web-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[10]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[10]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-020b8c5f9ce59205f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020b8c5f9ce59205f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0923a5ad0c8ab96c1",
            "private_dns": "ip-172-31-14-14.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.14",
            "public_dns": "ec2-13-58-28-248.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.28.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019d982e5ea40aec3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-10"
            },
            "tags_all": {
              "Name": "web-server-10"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[11]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[11]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0283cf677e6731648",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0283cf677e6731648",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a7622e62d04402c",
            "private_dns": "ip-172-31-0-172.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.172",
            "public_dns": "ec2-3-133-157-176.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.157.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01bfa31188dd6d706",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-11"
            },
            "tags_all": {
              "Name": "web-server-11"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[12]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[12]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0cf6d8f0b5fb727b8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf6d8f0b5fb727b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f6ae3b0c3d9d6f44",
            "private_dns": "ip-172-31-5-2.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.2",
            "public_dns": "ec2-3-139-93-167.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.93.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e4b346a1d6084ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-12"
            },
            "tags_all": {
              "Name": "web-server-12"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[13]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[13]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-server-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d708365a0571052",
            "association_id": "eipassoc-018a623e04dbe7358",
            "domain": "vpc",
            "id": "eipalloc-03d708365a0571052",
            "instance": "i-0995047ca536539fd",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07cc049df4d4ac344",
            "private_dns": "ip-172-31-8-43.us-east-2.compute.internal",
            "private_ip": "172.31.8.43",
            "public_dns": "ec2-13-59-151-3.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.151.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.web-servers.aws_instance.ec2_instance",
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[13]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0995047ca536539fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0995047ca536539fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cc049df4d4ac344",
            "private_dns": "ip-172-31-8-43.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.8.43",
            "public_dns": "ec2-52-14-5-124.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.5.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008ced034cf79b970",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-13"
            },
            "tags_all": {
              "Name": "web-server-13"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[14]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[14]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-08b7508758e80b59d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b7508758e80b59d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a4ed1e9c36fd168",
            "private_dns": "ip-172-31-3-195.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.195",
            "public_dns": "ec2-3-149-242-74.us-east-2.compute.amazonaws.com",
            "public_ip": "3.149.242.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05d98f490e7c4b79d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-14"
            },
            "tags_all": {
              "Name": "web-server-14"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[15]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[15]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-01e8a3c41cf173276",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e8a3c41cf173276",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055949d0e3df78ab1",
            "private_dns": "ip-172-31-6-14.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.14",
            "public_dns": "ec2-18-220-182-104.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.182.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-004616027109a1f1f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-15"
            },
            "tags_all": {
              "Name": "web-server-15"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[16]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[16]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-server-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060b87a8dc5056a74",
            "association_id": "eipassoc-07e3c720d83b3bc3e",
            "domain": "vpc",
            "id": "eipalloc-060b87a8dc5056a74",
            "instance": "i-066141925a3fd7902",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08db654c00a4bcda9",
            "private_dns": "ip-172-31-6-189.us-east-2.compute.internal",
            "private_ip": "172.31.6.189",
            "public_dns": "ec2-3-128-213-22.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.213.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.web-servers.aws_instance.ec2_instance",
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[16]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-066141925a3fd7902",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066141925a3fd7902",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08db654c00a4bcda9",
            "private_dns": "ip-172-31-6-189.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.189",
            "public_dns": "ec2-3-133-138-238.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.138.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05044f7f031dbca9b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-16"
            },
            "tags_all": {
              "Name": "web-server-16"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[17]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[17]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0cee8443a1929b181",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cee8443a1929b181",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a948ba00fb10eb73",
            "private_dns": "ip-172-31-11-252.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.252",
            "public_dns": "ec2-3-145-102-14.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.102.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019f5e2f6334fdd6c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-17"
            },
            "tags_all": {
              "Name": "web-server-17"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[18]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[18]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0f4636c6a456af26f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f4636c6a456af26f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0343b65cf2af674bb",
            "private_dns": "ip-172-31-11-50.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.50",
            "public_dns": "ec2-3-15-235-1.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.235.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0961badee1424bfa7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-18"
            },
            "tags_all": {
              "Name": "web-server-18"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[19]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[19]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0c8a974d53f10545a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8a974d53f10545a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e607649daca3a439",
            "private_dns": "ip-172-31-4-131.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.4.131",
            "public_dns": "ec2-18-191-147-180.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.147.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d33b9d76ecac0dd5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-19"
            },
            "tags_all": {
              "Name": "web-server-19"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[1]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-03ac2ae89dbc17a05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ac2ae89dbc17a05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c0c6fccf2e7ebf9f",
            "private_dns": "ip-172-31-2-252.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.252",
            "public_dns": "ec2-3-144-10-156.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.10.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a47f6ed063ff4170",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-1"
            },
            "tags_all": {
              "Name": "web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[20]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[20]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0997bbb64f620bd6f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0997bbb64f620bd6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ff092900e329f6e4",
            "private_dns": "ip-172-31-3-157.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.157",
            "public_dns": "ec2-18-189-185-136.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.185.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0550a89fd23d23707",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-20"
            },
            "tags_all": {
              "Name": "web-server-20"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[21]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[21]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0d4ed5e7c6bc54ae9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4ed5e7c6bc54ae9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03640ef5d17ffacfa",
            "private_dns": "ip-172-31-4-179.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.4.179",
            "public_dns": "ec2-3-21-247-196.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.247.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a0807ffc93f715de",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-21"
            },
            "tags_all": {
              "Name": "web-server-21"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[22]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[22]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-04890c15170afc3e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04890c15170afc3e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009f2ab8ae030434e",
            "private_dns": "ip-172-31-12-6.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.6",
            "public_dns": "ec2-18-218-211-21.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.211.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c2f9bbfcf50c5b03",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-22"
            },
            "tags_all": {
              "Name": "web-server-22"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[23]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[23]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-056df372ded041ff4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056df372ded041ff4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01828bdca516fc0c1",
            "private_dns": "ip-172-31-0-249.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.249",
            "public_dns": "ec2-18-225-149-13.us-east-2.compute.amazonaws.com",
            "public_ip": "18.225.149.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb093ffee538544f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-23"
            },
            "tags_all": {
              "Name": "web-server-23"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[24]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[24]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-09c0f9873ed52c173",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c0f9873ed52c173",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0517c0d1b8dcf0333",
            "private_dns": "ip-172-31-12-203.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.203",
            "public_dns": "ec2-3-145-46-5.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.46.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b19f4a6d5013d1a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-24"
            },
            "tags_all": {
              "Name": "web-server-24"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[25]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[25]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-01d97582eb4d7d28c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d97582eb4d7d28c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c748a3634d56850",
            "private_dns": "ip-172-31-3-51.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.51",
            "public_dns": "ec2-13-58-165-33.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.165.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d398dcbd66bce06f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-25"
            },
            "tags_all": {
              "Name": "web-server-25"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[26]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[26]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0682c51bc81cee8a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0682c51bc81cee8a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07913e2edc5bd3862",
            "private_dns": "ip-172-31-9-24.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.24",
            "public_dns": "ec2-3-133-137-63.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.137.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f2b77527c7c60423",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-26"
            },
            "tags_all": {
              "Name": "web-server-26"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[27]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[27]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0f9a14fece18a88b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9a14fece18a88b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b6d03e6dbf0cf57",
            "private_dns": "ip-172-31-5-45.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.45",
            "public_dns": "ec2-3-145-64-67.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.64.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-035a565d195a035bf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-27"
            },
            "tags_all": {
              "Name": "web-server-27"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[28]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[28]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0e8f63cc25f1e9a04",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8f63cc25f1e9a04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d6df1ee04758735",
            "private_dns": "ip-172-31-15-83.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.83",
            "public_dns": "ec2-3-15-202-149.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.202.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-036a55babefab7983",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-28"
            },
            "tags_all": {
              "Name": "web-server-28"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[29]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[29]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-0b638b1cb71272679",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b638b1cb71272679",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09765aa0e20bd06d2",
            "private_dns": "ip-172-31-3-229.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.229",
            "public_dns": "ec2-3-147-27-243.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.27.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00cb7ac2aee72a39c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-29"
            },
            "tags_all": {
              "Name": "web-server-29"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[2]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-064de5efee1939eeb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064de5efee1939eeb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca7298d689709557",
            "private_dns": "ip-172-31-2-26.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.26",
            "public_dns": "ec2-3-145-55-100.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.55.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-064048e44c85298cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-2"
            },
            "tags_all": {
              "Name": "web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[3]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[3]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-server-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00704a30ca958a8d1",
            "association_id": "eipassoc-0fc3f2367f0f6dea2",
            "domain": "vpc",
            "id": "eipalloc-00704a30ca958a8d1",
            "instance": "i-08cfe80de022fa87d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02d4f0a0418076502",
            "private_dns": "ip-172-31-6-89.us-east-2.compute.internal",
            "private_ip": "172.31.6.89",
            "public_dns": "ec2-3-17-168-51.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.168.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.web-servers.aws_instance.ec2_instance",
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[3]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-08cfe80de022fa87d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cfe80de022fa87d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d4f0a0418076502",
            "private_dns": "ip-172-31-6-89.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.89",
            "public_dns": "ec2-3-142-136-121.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.136.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f77ef8137bbf3ee3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-3"
            },
            "tags_all": {
              "Name": "web-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[4]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[4]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-04d7fde4782180d0a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d7fde4782180d0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0047698929bf10469",
            "private_dns": "ip-172-31-3-38.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.38",
            "public_dns": "ec2-3-139-233-174.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.233.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05eebd3fe32e21f66",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-4"
            },
            "tags_all": {
              "Name": "web-server-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[5]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[5]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-09a6bdc4cc443af25",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a6bdc4cc443af25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051c859b49708a5ff",
            "private_dns": "ip-172-31-9-224.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.9.224",
            "public_dns": "ec2-18-118-0-248.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.0.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-067ea0b1b958f2240",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-5"
            },
            "tags_all": {
              "Name": "web-server-5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[6]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[6]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-09135cde5e8144e23",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09135cde5e8144e23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0767b9ca32347374b",
            "private_dns": "ip-172-31-0-53.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.53",
            "public_dns": "ec2-18-217-34-207.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.34.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-051da5999ae1cd6c5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-6"
            },
            "tags_all": {
              "Name": "web-server-6"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[7]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[7]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web-server-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ef8674439d666f4",
            "association_id": "eipassoc-08a909a2dff7cd570",
            "domain": "vpc",
            "id": "eipalloc-09ef8674439d666f4",
            "instance": "i-09698f22bd0fc3c43",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f03a2e8f2b87dcef",
            "private_dns": "ip-172-31-11-40.us-east-2.compute.internal",
            "private_ip": "172.31.11.40",
            "public_dns": "ec2-3-20-208-69.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.208.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.web-servers.aws_instance.ec2_instance",
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[7]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-09698f22bd0fc3c43",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09698f22bd0fc3c43",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f03a2e8f2b87dcef",
            "private_dns": "ip-172-31-11-40.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.40",
            "public_dns": "ec2-3-135-220-221.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.220.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05ff9e4be9f4c4d85",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-7"
            },
            "tags_all": {
              "Name": "web-server-7"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[8]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[8]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-087e68723c658c9fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087e68723c658c9fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04014fbdb17bafca7",
            "private_dns": "ip-172-31-10-95.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.95",
            "public_dns": "ec2-3-138-67-155.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.67.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dcd3183822a1a771",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-8"
            },
            "tags_all": {
              "Name": "web-server-8"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.web-servers[9]",
      "mode": "data",
      "type": "aws_security_group",
      "name": "network-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:346736591091:security-group/sg-0cc34486b87a7deb7",
            "description": "launch-wizard-2 created 2024-04-09T06:26:58.571Z",
            "filter": null,
            "id": "sg-0cc34486b87a7deb7",
            "name": "launch-wizard-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-636bff08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web-servers[9]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0900fe555666598a2",
            "arn": "arn:aws:ec2:us-east-2:346736591091:instance/i-056576d2e426fa549",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056576d2e426fa549",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-server-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04810f499540eafbe",
            "private_dns": "ip-172-31-11-213.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.213",
            "public_dns": "ec2-18-217-161-167.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.161.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a1a4778a5aeaff0d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bd12aed6",
            "tags": {
              "Name": "web-server-9"
            },
            "tags_all": {
              "Name": "web-server-9"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc34486b87a7deb7"
            ]
          },
          "dependencies": [
            "module.web-servers.data.aws_key_pair.web_server_key_pair",
            "module.web-servers.data.aws_security_group.network-security-group"
          ]
        }
      ]
    }
  ]
}